--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,15 +17,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 1rem;
   padding: 3rem;
   text-align: center;
   color: white;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 30px;
-  min-width: 650px;
-  min-height: 650px;
+  min-width: 700px;
+  min-height: 700px;
   background-color: rgba(91, 116, 138, 0.3);
   backdrop-filter: blur(50px);
 }
@@ -43,6 +42,7 @@
   line-height: 1.5;
   letter-spacing: 0.2em;
   font-weight: 100;
+  max-width: 425px;
 }
 
 .logo {
@@ -53,7 +53,7 @@
 .button {
   background: linear-gradient(-90deg, #00a1fa, #00ea99);
   min-width: 200px;
-  min-height : 40px;
+  min-height: 40px;
   padding: 0.5rem 0.2rem;
   border: none;
   border-radius: 20px;
@@ -63,6 +63,20 @@
   font-weight: bold;
   font-size: 0.9rem;
   cursor: pointer;
+}
+
+.icon {
+  margin-left: 1rem;
+  animation: translate 1000ms ease-in-out infinite ;
+}
+
+@keyframes translate {
+  0% {
+    transform : translateX(0px)
+  }
+  50% {
+    transform: translateX(10px);
+  }
 }
 
 @media (max-width: 600px) {
