--- a/components/HomeBackground.module.css
+++ b/components/HomeBackground.module.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: 0;
   z-index: -1;
-  height: 100vh;
-  width: 100vw;
+  width : 100%;
+  height : 100%;
   background: linear-gradient(-220deg, #151c35, #00412b);
 }
