--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: Roboto, sans-serif;
-  height : 100vh;
-  overflow: hidden;
+  width : 100vw;
 }
 
 a {
