--- a/styles/generator.module.css
+++ b/styles/generator.module.css
@@ -1,9 +1,3 @@
-.main {
-  height: 100%;
-  /* padding: 0;
-  flex: 1; */
-}
-
 .generator_container {
   max-width: 80vw;
   /* height: 50vh; */
@@ -14,22 +8,20 @@
   column-gap: 20px;
 }
 
-.generator_container div {
-  padding-top : 2rem;
-}
-
 .generator_container label {
+  display : block;
   color: white;
   text-transform: uppercase;
   font-family: Now;
   letter-spacing: 0.4rem;
+  padding : 2rem 0 1rem 0; 
 }
 
-.generator_container input{
+.generator_container input {
   border-radius: 10px;
-  height : 50px ; 
-  border : solid 2px rgba(123, 123, 123, 0.5);
-  background : rgba(0, 0, 0, 0.5)
+  height: 50px;
+  border: solid 2px rgba(123, 123, 123, 0.5);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .url_label {
@@ -42,8 +34,8 @@
   grid-row: 2 / 3;
 }
 
-.url_input input{
-  width : 100%;
+.url_input input {
+  width: 100%;
 }
 
 .cat_label {
@@ -56,8 +48,8 @@
   grid-row: 2 / 3;
 }
 
-.cat_input input{
-  width : 100%;
+.cat_input input {
+  width: 100%;
 }
 
 .id_label {
@@ -71,7 +63,7 @@
 }
 
 .id_input input {
-  width : 100%;
+  width: 100%;
 }
 
 .pwd_label {
@@ -83,6 +75,6 @@
   grid-column: 1/3;
 }
 
-.pwd_input input{
-  width : 100%;
+.pwd_input input {
+  width: 100%;
 }
