--- a/styles/generator.module.css
+++ b/styles/generator.module.css
@@ -2,7 +2,7 @@
   max-width: 80vw;
   /* height: 50vh; */
   margin: auto;
-  padding: 3rem;
+  padding: 2rem 3rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 20px;
@@ -77,4 +77,13 @@
 
 .pwd_input input {
   width: 100%;
+}
+
+.save_btn{
+  grid-column: 1/3;
+  grid-row: 7/8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin : 20px
 }
