--- a/styles/generator.module.css
+++ b/styles/generator.module.css
@@ -9,12 +9,12 @@
 }
 
 .generator_container label {
-  display : block;
+  display: block;
   color: white;
   text-transform: uppercase;
   font-family: Now;
   letter-spacing: 0.4rem;
-  padding : 2rem 0 1rem 0; 
+  padding: 2rem 0 1rem 0;
 }
 
 .generator_container input {
@@ -22,6 +22,8 @@
   height: 50px;
   border: solid 2px rgba(123, 123, 123, 0.5);
   background: rgba(0, 0, 0, 0.5);
+  color: hsla(0, 0%, 100%, 0.5);
+  padding: 0 1rem;
 }
 
 .url_label {
@@ -79,11 +81,11 @@
   width: 100%;
 }
 
-.save_btn{
+.save_btn {
   grid-column: 1/3;
   grid-row: 7/8;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin : 20px
+  margin: 20px;
 }
