--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -16,3 +16,46 @@
   cursor: pointer;
   border: none;
 }
+
+/* CARD CAROUSEL */
+
+.card_carousel {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+  margin: 100px auto;
+  align-items: center;
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.card {
+  width: 300px;
+  height: 120px;
+  opacity: 0%;
+  position: absolute;
+  transform: scale(0.85) translateY(50px);
+  transition: all 500ms ease;
+}
+
+.card.active {
+  opacity: 1;
+  transform: scale(1) translateY(0);
+  box-shadow: 0 30px 20px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.card.next {
+  opacity: 1;
+  z-index: 0;
+}
+
+.card.prev {
+  transform: scale(1.1) translateY(-50px);
+  z-index: 2;
+  opacity: 0;
+  visibility: hidden;
+}
