--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -24,19 +24,22 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  height: 200px;
-  margin: 100px auto;
+  min-height: 300px;
+  margin: 80px auto;
   align-items: center;
   position: relative;
 }
 
 .card {
-  width: 300px;
-  height: 200px;
+  min-width: 400px;
+  height: 250px;
   opacity: 0%;
   position: absolute;
   transform: scale(0.85) translateY(50px);
-  transition: all 500ms ease;
+  transition: all 650ms ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card.active {
