--- a/public/fonts/fonts.css
+++ b/public/fonts/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Now";
-  src: url("/fonts/now/Now-Bold.otf") format("opentype");
+  src: url("/fonts/now/Now-Light.otf") format("opentype");
   font-style: normal;
   font: 700;
   font-display: swap;
