--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -24,7 +24,7 @@
 .card h1 {
   margin: 1rem 0 2rem 0;
   font-size: 2rem;
-  font-family: Now;
+  font-family: "Now", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   letter-spacing: 0.5rem;
 }
 
