--- a/components/NavBar.module.css
+++ b/components/NavBar.module.css
@@ -4,8 +4,8 @@
     max-width : 80vw;
     justify-content: space-between;
     align-items: center;
-    margin: 2rem auto;
-    padding : 1rem 10rem 1rem 2rem ;
+    margin: 1rem auto;
+    padding : 1rem 1rem 1rem 2rem ;
 }
 
 .container li {
@@ -14,7 +14,6 @@
 }
 
 .container button {
-    min-width: 200px;
-    min-height: 40px;
-    padding: 1rem 2rem;
+    max-width: 200px;
+    padding: 1rem;
 }
