--- a/styles/generator.module.css
+++ b/styles/generator.module.css
@@ -8,11 +8,82 @@
   column-gap: 20px;
 }
 
+@media (max-width: 600px) {
+  .generator_container {
+    max-width: 90vw;
+  }
+
+  .generator_container label {
+    padding: 1rem 0 0.5rem 0 !important;
+  }
+
+  .url_label {
+    grid-column: 1/3 !important;
+    grid-row: 1 / 2 !important;
+  }
+
+  .url_input {
+    grid-column: 1 / 3 !important;
+    grid-row: 2 / 3 !important;
+  }
+
+  .url_input input {
+    width: 100%;
+  }
+
+  .cat_label {
+    grid-column: 1/3 !important;
+    grid-row: 3/4 !important;
+  }
+
+  .cat_input {
+    grid-column: 1 / 3 !important;
+    grid-row: 4 / 5 !important;
+  }
+
+  .cat_input input {
+    width: 100%;
+  }
+
+  .id_label {
+    grid-column: 1/3;
+    grid-row: 5/6 !important;
+  }
+
+  .id_input {
+    grid-column: 1/3;
+    grid-row: 6/7 !important;
+  }
+
+  .id_input input {
+    width: 100%;
+  }
+
+  .pwd_label {
+    grid-column: 1/3;
+    grid-row: 7/8 !important;
+  }
+
+  .pwd_input {
+    grid-column: 1/3 !important;
+    grid-row: 8/9;
+  }
+
+  .pwd_input input {
+    width: 100%;
+  }
+
+  .save_btn {
+    grid-column: 1/3 !important;
+    grid-row: 9/10 !important;
+  }
+}
+
 .generator_container label {
   display: block;
   color: white;
   text-transform: uppercase;
-  font-family: Now, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Now, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   letter-spacing: 0.4rem;
   padding: 2rem 0 1rem 0;
 }
