--- a/styles/safe.module.css
+++ b/styles/safe.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   /* min-width: 80vw; */
   justify-content: space-between;
-  margin : 0 auto;
+  /* margin : 0 auto; */
   overflow-x: scroll;
 }
 
