--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -32,7 +32,7 @@
 
 .card {
   min-width: 400px;
-  /* height: 300px; */
+  height: 300px;
   opacity: 0%;
   position: absolute;
   transform: scale(0.85) translateY(50px);
@@ -41,6 +41,17 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width : 600px){
+  .card {
+    min-width : 300px
+  }
+  .card_carousel{
+    margin : 60px auto
+  }
+}
+
+
 
 .card.active {
   opacity: 1;
