--- a/components/NavBar.module.css
+++ b/components/NavBar.module.css
@@ -6,6 +6,8 @@
     align-items: center;
     margin: 1rem auto;
     padding : 1rem 1rem 1rem 2rem ;
+    position : relative;
+    z-index : 100;
 }
 
 .container li {
