--- a/components/NavBar.module.css
+++ b/components/NavBar.module.css
@@ -4,7 +4,7 @@
     max-width : 80vw;
     justify-content: space-between;
     align-items: center;
-    margin: 1rem auto;
+    margin: 0 auto 1rem auto;
     padding : 1rem 1rem 1rem 2rem ;
     position : relative;
     z-index : 100;
