--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,17 @@
 .main {
-  max-height: 100vh;
-  padding: 4rem 0;
+  min-height: 100vh;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: #151c35;
+  background-image: url("/assets/bg.svg") no-repeat;
+  background-image: url("/assets/bg.svg"),
+    linear-gradient(-220deg, #151c35, #00412b);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 @media (max-width: 600px) {
@@ -15,8 +21,7 @@
   }
 
   .card p {
-    margin : 0 0 2rem 0 !important;
-
+    margin: 0 0 2rem 0 !important;
   }
 }
 
